--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["Theodros Zelleke <theodros.zelleke@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-streamlit = "^1.20.0"
 pandas = "^1.5.3"
+seaborn = "^0.12.2"
+streamlit = "^1.20.0"
 streamlit-aggrid = "^0.3.4.post3"
 
 [tool.poetry.dev-dependencies]
